# botscript

./: .gitignore  .gitmodules  .pkg  CMakeLists.txt  README.md  binding.gyp  bot.cpp  bot.h  config_kv.json  doxygen.conf  generate_package.py  http.h  lua_connection.cpp  lua_connection.h  main.cpp  module.cpp  module.h  module_state_.txt  pybotscript.cpp  webclient.h  wscript
configs/: config_kv.json
exceptions/: lua_exception.h
external_lib/lua-5.2.0/: CMakeLists.txt
external_lib/mongo-client-2.1.1/: SConstruct
external_lib/mongo-client-2.1.1/src/mongo/: buildinfo.cpp
external_lib/pugixml-1.0/scripts/: CMakeLists.txt
external_lib/pugixml-1.0/src/: pugixml.hpp
external_lib/rapidjson/include/rapidjson/: rapidjson_with_exception.h
external_lib/tidy/: CMakeLists.txt
external_lib/tidy/include/: platform.h
jni_src/net/makielski/botscript/: Bot.java  TestMain.java
src/: CMakeLists.txt  bot.cc  bot.cpp  bot.h  bot_browser.cc  bot_browser.h  bot_config.cc  bot_config.h  bot_factory.h  config.cc  config.h  coroutine_test.cpp  download.cpp  http.h  js_bot.h  js_bot_motor.h  lua_connection.cpp  lua_connection.h  main.cc  main.cpp  mem_bot_config.cc  mem_bot_config.h  mem_config.cc  mem_config.h  module.cc  module.cpp  module.h  nodejs_botscript.cc  package.cc  package.h  proxy_check.cc  proxy_check.cpp  proxy_check.h  proxy_manager.h  pybotscript.cpp  rapidjson_with_exception.h  test.js  webclient.h  wscript
src/exceptions/: bad_login_exception.h  invalid_proxy_exception.h
src/http/: error.h  http.h  http_con.cc  http_con.h  http_source.cc  http_source.h  noexcept.h  url.cc  url.h  useragents.h  util.cc  util.h  webclient.cc  webclient.h
src/java/: net_makielski_botscript_Bot.cpp  net_makielski_botscript_Bot.h  util.h
src/lua/: lua_connection.cc  lua_connection.cpp  lua_connection.h  lua_http.cc  lua_http.cpp  lua_http.h  lua_util.cc  lua_util.cpp  lua_util.h  state_wrapper.h
src/node/: async.h  js_bot.h  js_bot_motor.h  js_proxy_check.h  nodejs_botscript.cc  threaded_async.h  util.h
test/: config_test.cpp
visual_studio/botscript/: botscript.sln  botscript.vcxproj  botscript.vcxproj.filters  botscript.vcxproj~
visual_studio/lua/: lua.vcxproj  lua.vcxproj.filters
visual_studio/luac/: luac.vcxproj  luac.vcxproj.filters
visual_studio/pugi/: pugi.vcxproj  pugi.vcxproj.filters
visual_studio/tidy/: tidy.vcxproj  tidy.vcxproj.filters
